fixed the vertical spacing of the header logo

--- a/wp-content/themes/winterfest/static/sass/_header.scss
+++ b/wp-content/themes/winterfest/static/sass/_header.scss
@@ -284,7 +284,6 @@ html.mobile-nav-active .mobile {
     height: auto;
     .logo {
       left: 15px;
-      top: calc(50% - 30px);
     }
   }
   nav.primary {
